# investorai-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  conftest.py  main.py  pyproject.toml  railway.toml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  stocks.ts
frontend/src/components/: BYOKSetup.tsx  ChatPanel.tsx  MonitoringDashboard.tsx  NewsFeed.tsx  PriceChart.tsx  StatsCard.tsx  TickerSelector.tsx
frontend/src/hooks/: useBYOK.ts  useChat.ts
frontend/src/types/: index.ts
investorai_mcp/: calendar.py  calender.py  config.py  server.py  stocks.py
investorai_mcp/api/: __init__.py  error_handler.py  rate_limit.py  router.py  sanitize.py
investorai_mcp/data/: base.py  yfinance_adapter.py
investorai_mcp/db/: __init__.py  cache_manager.py  models.py
investorai_mcp/db/migrations/: env.py
investorai_mcp/db/migrations/versions/: 001_initial_schema.py  002_chat_request_log.py  003_add_ttft_ms.py  004_add_component_timings.py
investorai_mcp/llm/: agent.py  citations.py  context_budget.py  history.py  litellm_client.py  prompt_builder.py  query_router.py  validator.py
investorai_mcp/tools/: get_cache_status.py  get_daily_summary.py  get_daily_summary_batch.py  get_news.py  get_news_batch.py  get_price_history.py  get_price_history_batch.py  get_sentiment.py  get_stock_info.py  get_system_info.py  get_trend_summary.py  parse_question.py  refresh_ticker.py  search_ticker.py  utils.py
scripts/: generate_evals.py  latency_report.py  prepopulate.py  verify_evals.py
tests/evals/: qa_pairs.json
tests/integration/: test_migrations.py  test_prepopulate.py
tests/unit/: test_agent.py  test_api.py  test_cache_manager.py  test_calendar.py  test_calender.py  test_citations.py  test_config.py  test_context_budget.py  test_get_cache_status.py  test_get_daily_summary.py  test_get_daily_summary_batch.py  test_get_news.py  test_get_news_batch.py  test_get_price_history.py  test_get_price_history_batch.py  test_get_sentiment.py  test_get_stock_info.py  test_get_trend_summary.py  test_history.py  test_litellm_client.py  test_models.py  test_parse_question.py  test_prompt_builder.py  test_query_router.py  test_refresh_ticker.py  test_router_coverage.py  test_sanitize.py  test_search_ticker.py  test_server.py  test_stocks.py  test_system_info.py  test_utils.py  test_validator.py  test_yfinance_adapter.py
