[project]
name = "investorai-mcp"
version = "0.1.0"
description = "AI-native stock research MCP server for retail investors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    "fastmcp>=2.0",
    "fastapi>=0.110",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "yfinance>=0.2.40",
    "litellm>=1.40",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "pandas>=2.2",
    "langfuse>=4.2.0",
]

[project.scripts]
investorai-mcp = "investorai_mcp.server:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "pytest-html>=4.0",
    "coverage[toml]>=7.0",
    "anyio>=4.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.9",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "respx>=0.21",
]

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["investorai_mcp"]

[tool.hatch.build.targets.editable]
packages = ["investorai_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=investorai_mcp --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["investorai_mcp"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B", "A"]
ignore = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
