[project]
name = "investorai-mcp"
version = "0.1.0"
description = "AI-native stock research MCP server for retail investors"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    "fastmcp>=2.0",
    "fastapi>=0.110",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "yfinance>=0.2.40",
    "litellm>=1.40",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "pandas>=2.2",
    "langfuse>=4.2.0",
    "tenacity>=9.1.4",
]

[project.scripts]
investorai-mcp = "investorai_mcp.server:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "pytest-html>=4.0",
    "coverage[toml]>=7.0",
    "anyio>=4.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.9",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "respx>=0.21",
    "pylint>=4.0.5",
]

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["investorai_mcp"]

[tool.hatch.build.targets.editable]
packages = ["investorai_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=investorai_mcp --cov-report=term-missing --cov-report=html --cov-fail-under=72"

[tool.coverage.run]
source = ["investorai_mcp"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B", "A"]
ignore = [
    "S101",   # assert statements in tests
    "E501",   # line too long — formatter handles this, pre-existing strings/comments
    "E402",   # module import not at top — intentional lazy imports for perf
    "A002",   # argument shadows builtin — `range` is domain terminology in tools
    "S104",   # binding to all interfaces — intentional in dev config
    "E701",   # multiple statements on one line — pre-existing style
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring — not our convention
    "C0115",  # missing-class-docstring — not our convention
    "C0116",  # missing-function-docstring — not our convention
    "C0301",  # line-too-long — ruff enforces 100 char limit
    "C0303",  # trailing-whitespace — ruff handles
    "C0413",  # wrong-import-position — intentional lazy imports
    "C0415",  # import-outside-toplevel — intentional circular-import avoidance
    "W0105",  # pointless-string-statement — module-level section headers
    "W0212",  # protected-access — tools intentionally call CacheManager internal helpers
    "W0603",  # global-statement — intentional lazy adapter init pattern across tools
    "W0611",  # unused-import — tool registration imports are intentional (noqa: F401)
    "W0613",  # unused-argument — FastAPI/FastMCP signatures require matching args
    "W0622",  # redefined-builtin 'range' — domain terminology, suppressed in ruff too
    "W0718",  # broad-exception-caught — intentional in background task handlers
    "R0801",  # duplicate-code — similar tool bootstrap patterns are intentional
    "R0401",  # cyclic-import — known, resolved via lazy imports (which triggers C0415)
    "R0902",  # too-many-instance-attributes — prompt_builder has 15, no hard cap needed
    "R0911",  # too-many-return-statements — parse_question has complex branching
    "R0913",  # too-many-arguments — LLM/builder functions need many params
    "R0903",  # too-few-public-methods — SQLAlchemy model classes are data containers
    "R0914",  # too-many-locals — no hard limit in this codebase
    "R0912",  # too-many-branches — LLM/agent response parsing has complex branching
    "R0915",  # too-many-statements — router endpoints have complex but correct logic
    "R0917",  # too-many-positional-arguments — same as R0913
    "E1102",  # not-callable — false positive for SQLAlchemy func.count() / func.now()
    "C0103",  # invalid-name — AsyncSessionLocal uses PascalCase (SQLAlchemy convention)
]

[tool.pylint.format]
max-line-length = 100
